@@ -23,8 +23,8 @@ public class TestSipServiceApplication {
         dynamicPropertyRegistry.add(
                 "eureka.client.service-url.defaultZone",
                 () ->
-                        String.format(
-                                "http://%s:%d/eureka",
+                        
+                                "http://%s:%d/eureka".formatted(
                                 discoveryServiceContainer.getHost(),
                                 discoveryServiceContainer.getMappedPort(8761)));
         return discoveryServiceContainer;
